--- a/eauction/templates/base.html
+++ b/eauction/templates/base.html
@@ -2,7 +2,10 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{% block title %} {% endblock %}}</title>
+<link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -12,6 +15,7 @@
 {{% block search %}{% endblock %}}
 {{% block login%}{% endblock %}}
 {{% block C %}{% endblock %}}
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
