--- a/eauction/Yaas/templates/base.html
+++ b/eauction/Yaas/templates/base.html
@@ -1,21 +1,27 @@
+{% load static from staticfiles %}
 <!DOCTYPE html>
 <html>
 <head lang="en">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{% block title %} {% endblock %}}</title>
-<link href="css/bootstrap.min.css" rel="stylesheet">
+    <title>{% block title %} {% endblock %}</title>
+<link href="{{STATIC_URL}}css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
+<div class="container">
 
-<header><nav><a href="/#/">Home</a> <a href="/#/">Browse Categories</a>
-    <a href="/#/">Create Categories</a> </nav></header>
-{{% block search %}{% endblock %}}
-{{% block login%}{% endblock %}}
-{{% block C %}{% endblock %}}
+<header><ul class="nav nav-pills">
+  <li class="active"><a href="#">Home</a></li>
+  <li><a href="#">Profile</a></li>
+  <li><a href="#">Messages</a></li>
+</ul></header>
+{% block search %}{% endblock %}
+{% block login%}{% endblock %}
+{% block C %}{% endblock %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="{{STATIC_URL}}js/bootstrap.min.js"></script>
+</div>
 </body>
 </html>
