--- a/eauction/Yaas/templates/index.html
+++ b/eauction/Yaas/templates/index.html
@@ -1,4 +1,4 @@
-{% include base.html %}
+{% extends 'base.html' %}
 {% block title %}Home{% endblock %}
 {% block search %}{% endblock %}
 {% block login %}
