--- a/eauction/Yaas/templates/index.html
+++ b/eauction/Yaas/templates/index.html
@@ -21,7 +21,7 @@
   </div>
   <div class="form-group">
     <div class="col-sm-10">
-      <p></p><button type="submit" class="btn btn-default">Sign in</button>  Don't have an account?<a href="/regester/"> Click here</a> </p>
+      <p></p><button type="submit" class="btn btn-default">Sign in</button>  Don't have an account?<a href="/register/"> Click here</a> </p>
       <input type="hidden" name="next" value="login">
     </div>
   </div>
