--- a/eauction/Yaas/templates/base.html
+++ b/eauction/Yaas/templates/base.html
@@ -12,7 +12,8 @@
 <body>
 <div class="container">
 
-<header><nav class="navbar navbar-default" role="navigation">
+<header>
+    <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <!-- Home and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -29,7 +30,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Browse Categories</a></li>
-        <li><a href="#">Add Auction</a></li>
+        <li><a href="/new_auction/">Add Auction</a></li>
 
       </ul>
       <form class="navbar-form navbar-left" role="search">
