--- a/eauction/Yaas/templates/item.html
+++ b/eauction/Yaas/templates/item.html
@@ -2,37 +2,12 @@
 {% block title %}Home{% endblock %}
 {% block search %}{% endblock %}
 {% block login %}
-    <p><b>{{ message }}</b></p>
-  {% if form.errors%}
-    <p> Password or username is incorrect </p>
-  {% endif %}
-
-    <form class="form-horizontal" action="" role="form" method="post">
-    {% csrf_token %}
-  <div class="form-group">
-    <div class="col-sm-10">
-      <input type="text" class="form-control" name="username" id="username" placeholder="username">
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-10">
-      <input type="password" class="form-control" name="password" id="password" placeholder="Password">
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-10">
-      <button type="submit" class="btn btn-default">Sign in</button>
-      <input type="hidden" name="next" value="login">
-    </div>
-  </div>
-</form>
-
-
+{% include 'login.html' %}
 {% endblock %}
 {% block content %}
     <p>
     <b>Item name:</b> <br/>
-    {{ item.auctioon_name }}<br/><br/>
+    {{ item.auction_name }}<br/><br/>
     <b>Category:</b> <br/>
     {{ item.category }}<br/><br/>
     <b>Current Price:</b> <br/>
@@ -44,5 +19,5 @@
     <b>Auction owner:</b> <br/>
     {{ item.owner }}<br/><br/>
     </p>
-{{ item.id }}
+
 {% endblock %}
