--- a/eauction/Yaas/templates/new_category.html
+++ b/eauction/Yaas/templates/new_category.html
@@ -1,1 +1,12 @@
 {% extends 'base.html' %}
+
+{% block content %}
+    <div class="row">
+    <form action="/new_category/" method="post">{% csrf_token %}
+        <ul>
+            {{ form.as_p }}
+        </ul>
+    <input type="submit" name="submit" value="Create Blog">
+    </form>
+</div>
+{% endblock %}
