--- a/eauction/Yaas/templates/change_password.html
+++ b/eauction/Yaas/templates/change_password.html
@@ -2,10 +2,9 @@
 {% block search %}{% include 'search.html' %}{% endblock %}
 {% block content %}
 <form action="" method="post">{% csrf_token %}
-        <ul>
-            {{ form}}
-        </ul>
-    <input type="submit" name="submit" value="Edit Blog">
+        <table class="table table-condensed">
+            {{ form.as_table }}
+        </table>
+    <input type="submit" name="submit" value="Edit password">
     </form>
-
 {% endblock %}
