--- a/eauction/Yaas/templates/base.html
+++ b/eauction/Yaas/templates/base.html
@@ -33,12 +33,7 @@
         <li><a href="/new_auction/">Add Auction</a></li>
 
       </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+      {% block search %}{% endblock %}
 
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
