--- a/eauction/Yaas/templates/create_auction.html
+++ b/eauction/Yaas/templates/create_auction.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block search %}{% include 'search.html' %}{% endblock %}
 
 {% block content %}
     <div class="col-md-6">
