--- a/eauction/Yaas/templates/base.html
+++ b/eauction/Yaas/templates/base.html
@@ -34,14 +34,25 @@
 
       </ul>
       {% block search %}{% endblock %}
+        <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
 
+
+          </ul>
+        </li>
+      </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav></header>
 <div class="col-md-4">
-{% block login%}{% endblock %}
+{% if user.is_authenticated %}
+     <p>Welcome, {{ user.username|capfirst }}. <a href="/logout/"> logout.</a></p>
+{% else %}
+   {% include 'login.html' %}
+{% endif %}
 </div>
 <div class="col-md-12">
+
 {% block content %}{% endblock %}
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
