--- a/eauction/Yaas/templates/auction.html
+++ b/eauction/Yaas/templates/auction.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}Home{% endblock %}
+{% block search %}{% include 'search.html' %}{% endblock %}
 
-</body>
-</html>
+
+{% block content %}
+<table class="table table-condensed">
+    {{ form.as_table }}
+    </table>
+{% endblock %}
