--- a/eauction/Yaas/templates/create_auction.html
+++ b/eauction/Yaas/templates/create_auction.html
@@ -1,23 +1,25 @@
 {% extends 'base.html' %}
+{% block title %}Home{% endblock %}
 {% block search %}{% include 'search.html' %}{% endblock %}
+
 
 {% block content %}
     <div class="col-md-6">
-    <form action="" method="post" xmlns="http://www.w3.org/1999/html">{% csrf_token %}
+    <form action="" method="post" xmlns="http://www.w3.org/1999/html" name="create">{% csrf_token %}
         <table class="table table-condensed">
-            <option value="{{ user }}" selected="selected">---------</option>
+            <option value="{{users }}" selected="selected">---------</option>
             <tr><th><label for="id_auction_name">Auction name:</label></th>
                 <td><input id="id_auction_name" maxlength="30" name="auction_name" type="text" /></td></tr>
-<tr><th><label for="id_auction_description">Auction description:</label></th>
+    <tr><th><label for="id_auction_description">Auction description:</label></th>
     <td><textarea class="form-control" cols="40" id="id_auction_description" name="auction_description" rows="10">
-</textarea></td></tr>
-<tr><th><label for="id_price_min">Price min:</label></th><td>{{ form.price_min }}</td></tr>
-<tr><th><label for="id_category">Category:</label></th><td>{{ form.category }}</td></tr>
-<tr><th><label for="id_end_date">End date:</label></th><td><input id="id_end_date" name="end_date" type="text" />
+    </textarea></td></tr>
+    <tr><th><label for="id_price_min">Price min:</label></th><td>{{ form.price_min }}</td></tr>
+    <tr><th><label for="id_category">Category:</label></th><td>{{ form.category }}</td></tr>
+    <tr><th><label for="id_end_date">End date:</label></th><td><input id="id_end_date" name="end_date" type="text" />
     <p>Format:YYYY-MM-DD h:m:s eg. 2014-10-08 14:55:08</p></td></tr>
 
         </table>
-    <input type="submit" class="btn btn-default" name="submit" value="Create Auction">
+    <input type="submit" class="btn btn-default" name="create" value="Create Auction">
     </form>
     </div>
 {% endblock %}
