--- a/eauction/Yaas/templates/new_category.html
+++ b/eauction/Yaas/templates/new_category.html
@@ -4,7 +4,7 @@
     <div class="row">
     <form action="/new_category/" method="post">{% csrf_token %}
         <ul>
-            {{ form.as_p }}
+            {{ form.as_ul }}
         </ul>
     <input type="submit" name="submit" value="Create Blog">
     </form>
