--- a/eauction/Yaas/templates/password_changed.html
+++ b/eauction/Yaas/templates/password_changed.html
@@ -1,5 +1,6 @@
-{% extends 'base.html' %}
 
+{% extends 'base.html' %}
+{% load i18n %}
 {% block content %}
     <h1>Password change successful</h1>
 
